chore(setup): upgrade to Astro 5
Ref: #11

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,7 @@
       "@libs/*": ["src/libs/*"],
       "@messages/*": ["src/paraglide/*"]
     }
-  }
+  },
+  "include": [".astro/types.d.ts", "**/*"],
+  "exclude": ["dist"]
 }
