feat(content): introduce a SVG logo
Ref: #13

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "baseUrl": ".",
     "paths": {
       "@components": ["src/components/"],
+      "@components/*": ["src/components/*"],
+      "@images/*": ["src/assets/images/*"],
       "@layouts/*": ["src/layouts/*"],
       "@libs/*": ["src/libs/*"],
       "@messages/*": ["src/paraglide/*"],
