--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/node": "^9.0.0",
     "@astrojs/tailwind": "^5.1.3",
     "@inlang/paraglide-astro": "^0.2.6",
     "astro": "^5.0.4",
