feat(content): add everything necessary for the contact page
- add nodemailer dependency
- add missing colors in tailwindcss
- add missing Components
- add missing errors and events
- add contact and thanks page
- add missing TS aliases

Ref: #17

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
       "@layouts/*": ["src/layouts/*"],
       "@libs/*": ["src/libs/*"],
       "@messages/*": ["src/paraglide/*"],
-      "@styles/*": ["src/styles/*"]
+      "@styles/*": ["src/styles/*"],
+      "@types": ["src/types/"],
+      "@types/*": ["src/types/*"]
     }
   },
   "include": [".astro/types.d.ts", "**/*"],
