--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "starter",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -17,7 +17,9 @@
     "@astrojs/node": "^9.0.0",
     "@astrojs/tailwind": "^5.1.3",
     "@inlang/paraglide-astro": "^0.2.6",
+    "@types/nodemailer": "^6.4.17",
     "astro": "^5.0.4",
+    "nodemailer": "^6.9.16",
     "pino": "^9.5.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
