--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "starter",
+  "name": "lcnmqt",
   "type": "module",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
