--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/node": "^9.0.0",
-    "@astrojs/tailwind": "^5.1.3",
     "@inlang/paraglide-astro": "^0.2.6",
+    "@tailwindcss/vite": "^4.0.0",
     "@types/nodemailer": "^6.4.17",
     "astro": "^5.0.4",
     "nodemailer": "^6.9.16",
     "pino": "^9.5.0",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
@@ -38,7 +38,7 @@
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.8",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript-eslint": "^8.10.0",
     "validate-branch-name": "^1.3.1"
   }
