--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.13.0",
     "@inlang/paraglide-js": "1.11.3",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/eslint__js": "^8.42.3",
     "@types/eslint-config-prettier": "^6.11.3",
     "eslint": "^9.13.0",
