--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.13.0",
