--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@inlang/paraglide-js": "1.11.3",
     "@tailwindcss/typography": "^0.5.16",
     "husky": "^9.1.6",
+    "lefthook": "1.11.3",
     "lint-staged": "^15.2.10",
     "validate-branch-name": "^1.3.1"
   }
