--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "preview": "astro preview",
     "astro": "astro",
     "lint": "eslint src",
-    "postinstall": "paraglide-js compile --project ./project.inlang --outdir ./src/paraglide",
-    "prepare": "husky"
+    "postinstall": "paraglide-js compile --project ./project.inlang --outdir ./src/paraglide"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -30,9 +29,7 @@
     "@commitlint/config-conventional": "^19.5.0",
     "@inlang/paraglide-js": "1.11.3",
     "@tailwindcss/typography": "^0.5.16",
-    "husky": "^9.1.6",
     "lefthook": "1.11.3",
-    "lint-staged": "^15.2.10",
     "validate-branch-name": "^1.3.1"
   }
 }
